force-app/main/default/objects/NI_Org_Details__c/fields/Security_Token_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Security_Token_Encrypted__c</fullName>
    <description>Salesforce.com Change Request: NICC-015316

Encrypted field</description>
    <inlineHelpText>The security token for the admin user.  This is an encrypted field.</inlineHelpText>
    <label>Security Token (Encrypted)</label>
    <length>100</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>