force-app/main/default/objects/NI_Org_Details__c/fields/SecurityToken__c.field-meta.xml
<CustomField>
    <fullName>SecurityToken__c</fullName>
    <description>This field has been replaced by the &quot;Security Token (Encrypted)&quot; field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DO NOT USE Security Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>