force-app/main/default/objects/NI_Org_Details__c/fields/Shared_Org__c.field-meta.xml
<CustomField>
    <fullName>Shared_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce.com Change Request: NICC-006916</description>
    <inlineHelpText>Salesforce org that is CRM that has had the HRM application installed in it. Newmarket cannot sell licenses to these orgs, we can only service the application</inlineHelpText>
    <label>Shared Org</label>
    <type>Checkbox</type>
</CustomField>