force-app/main/default/objects/NI_Org_Details__c/fields/SignUpId__c.field-meta.xml
<CustomField>
    <fullName>SignUpId__c</fullName>
    <description>Id of the record created in TSO when this org was created</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SignUpId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>