force-app/main/default/objects/NI_Org_Details__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-021029</description>
    <label>HRM Template</label>
    <referenceTo>HRM_Template__c</referenceTo>
    <relationshipLabel>Org Details</relationshipLabel>
    <relationshipName>Org_Details</relationshipName>
    <type>Lookup</type>
</CustomField>