force-app/main/default/objects/NI_Org_Details__c/fields/Unmanaged_Custom_Apps__c.field-meta.xml
<CustomField>
    <fullName>Unmanaged_Custom_Apps__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <label>Unmanaged Custom Apps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>