force-app/main/default/objects/NI_Org_Details__c/fields/Web_Platform_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Platform_Name__c</fullName>
    <businessOwnerUser>ktownsend@newmarketinc.com</businessOwnerUser>
    <description>NICC-059350</description>
    <label>Web Platform Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Galaxy - Custom</fullName>
            </value>
            <value>
                <fullName>Galaxy - Essential</fullName>
            </value>
            <value>
                <fullName>HTB</fullName>
            </value>
            <value>
                <fullName>Standalone DM (no website)</fullName>
            </value>
            <value>
                <fullName>Weebly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>