force-app/main/default/objects/NI_Org_Details__c/recordTypes/Connex_for_D_B.recordType-meta.xml
<RecordType>
    <fullName>Connex_for_D_B</fullName>
    <active>true</active>
    <description>Used for Connex for D&amp;B records</description>
    <label>Connex for D&amp;B</label>
</RecordType>