force-app/main/default/objects/NI_Org_Details__c/recordTypes/Delphi_fdc_Support_Admin.recordType-meta.xml
<RecordType>
    <fullName>Delphi_fdc_Support_Admin</fullName>
    <active>true</active>
    <description>Used for Delphi.fdc Support Admin records</description>
    <label>Delphi.fdc Support Admin</label>
</RecordType>