force-app/main/default/objects/NI_Org_Details__c/recordTypes/Delphi_Net_Support_User.recordType-meta.xml
<RecordType>
    <fullName>Delphi_Net_Support_User</fullName>
    <active>true</active>
    <description>Used for Delphi.Net Support User records</description>
    <label>Delphi.Net Support User</label>
</RecordType>