force-app/main/default/objects/NI_Org_Details__c/recordTypes/DirectBook.recordType-meta.xml
<RecordType>
    <fullName>DirectBook</fullName>
    <active>true</active>
    <description>Used for DirectBook Org Detail Records</description>
    <label>DirectBook</label>
</RecordType>