force-app/main/default/objects/NI_Org_Details__c/recordTypes/HRM_Support_Admin.recordType-meta.xml
<RecordType>
    <fullName>HRM_Support_Admin</fullName>
    <active>true</active>
    <description>Used for HRM Orgs</description>
    <label>HRM Support Admin</label>
</RecordType>