force-app/main/default/objects/NI_Org_Details__c/recordTypes/LOD_Support_Admin.recordType-meta.xml
<RecordType>
    <fullName>LOD_Support_Admin</fullName>
    <active>true</active>
    <description>Libra OnDemand Connection Info</description>
    <label>LOD Support Admin</label>
</RecordType>