force-app/main/default/objects/NI_Org_Details__c/recordTypes/MB_CRM_Integration_User.recordType-meta.xml
<RecordType>
    <fullName>MB_CRM_Integration_User</fullName>
    <active>true</active>
    <description>Created per Michelle Roycroft,  IT Work Ticket: 98954</description>
    <label>MB CRM Integration User</label>
</RecordType>