force-app/main/default/objects/NI_Org_Details__c/recordTypes/MB_Trusted_Source_User.recordType-meta.xml
<RecordType>
    <fullName>MB_Trusted_Source_User</fullName>
    <active>true</active>
    <description>Used for MB S&amp;C Integration User records</description>
    <label>MB S&amp;C Integration User</label>
</RecordType>