force-app/main/default/objects/NI_Org_Details__c/recordTypes/NWS_Channel.recordType-meta.xml
<RecordType>
    <fullName>NWS_Channel</fullName>
    <active>true</active>
    <description>Used for Newmarket credentials for NWS Channels</description>
    <label>NWS Channel</label>
</RecordType>