force-app/main/default/objects/NI_Org_Details__c/recordTypes/PMS_Cloud.recordType-meta.xml
<RecordType>
    <fullName>PMS_Cloud</fullName>
    <active>true</active>
    <description>Used for Cloud PMS</description>
    <label>PMS - Cloud</label>
</RecordType>