force-app/main/default/objects/NI_Org_Details__c/recordTypes/PMS_Customer.recordType-meta.xml
<RecordType>
    <fullName>PMS_Customer</fullName>
    <active>true</active>
    <description>Used for PMS Customers</description>
    <label>PMS - Customer</label>
</RecordType>