force-app/main/default/objects/NI_Org_Details__c/recordTypes/PMS_Integration_User.recordType-meta.xml
<RecordType>
    <fullName>PMS_Integration_User</fullName>
    <active>true</active>
    <description>Used for PMS Integration User records</description>
    <label>PMS - Integration User</label>
</RecordType>