force-app/main/default/objects/NI_Org_Details__c/recordTypes/PMS_Internal.recordType-meta.xml
<RecordType>
    <fullName>PMS_Internal</fullName>
    <active>true</active>
    <description>Used for Internal PMS Environments</description>
    <label>PMS - Internal</label>
</RecordType>