force-app/main/default/objects/NI_Org_Details__c/recordTypes/Price_Position.recordType-meta.xml
<RecordType>
    <fullName>Price_Position</fullName>
    <active>true</active>
    <description>NICC-063922</description>
    <label>Price Position</label>
</RecordType>