force-app/main/default/objects/NI_Org_Details__c/recordTypes/SO_Details.recordType-meta.xml
<RecordType>
    <fullName>SO_Details</fullName>
    <active>true</active>
    <description>Service Optimization Details</description>
    <label>SO Details</label>
</RecordType>