force-app/main/default/objects/NI_Org_Details__c/recordTypes/TC_Marketing.recordType-meta.xml
<RecordType>
    <fullName>TC_Marketing</fullName>
    <active>true</active>
    <label>TC Marketing</label>
</RecordType>