force-app/main/default/objects/NI_Org_Details__c/validationRules/Org_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Org_Type_Required</fullName>
    <active>true</active>
    <description>Salesforce.com Change Request: NICC-007567

Org Type is required for Org Detail records with the &quot;LOD Support Admin&quot; and &quot;Delphi.fdc Support Admin&quot; Record Types</description>
    <errorConditionFormula>AND(OR(RecordType.Name = &quot;Delphi.fdc Support Admin&quot;,RecordType.Name = &quot;LOD Support Admin&quot;),
ISBLANK(TEXT(Org_Type__c)))</errorConditionFormula>
    <errorDisplayField>Org_Type__c</errorDisplayField>
    <errorMessage>You must select an Org Type for all Salesforce.com Org Detail records</errorMessage>
</ValidationRule>