force-app/main/default/objects/NI_Org_Details__c/listViews/All_Org_Details.listView-meta.xml
<ListView>
    <fullName>All_Org_Details</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Org_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DisablePolling__c</columns>
    <columns>Org_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Org Details</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>