force-app/main/default/objects/NI_Org_Details__c/listViews/All_Org_Details_Created_LAST_30_DAYS.listView-meta.xml
<ListView>
    <fullName>All_Org_Details_Created_LAST_30_DAYS</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Org_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Org_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>All Org Details - Created LAST 30 DAYS</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>