force-app/main/default/objects/NI_Org_Details__c/listViews/Delphi_fdc_Outage.listView-meta.xml
<ListView>
    <fullName>Delphi_fdc_Outage</fullName>
    <columns>Primary_Account_Owner__c</columns>
    <columns>NAME</columns>
    <columns>Org_Name__c</columns>
    <columns>Salesforce_Instance__c</columns>
    <columns>Licenses_Provisioned_Total__c</columns>
    <columns>Contact__c</columns>
    <columns>Org_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesforce_Instance__c</field>
        <operation>equals</operation>
        <value>na22</value>
    </filters>
    <filters>
        <field>Org_Status__c</field>
        <operation>equals</operation>
        <value>Created,Demo,In process,Provisioned,Trial</value>
    </filters>
    <label>Delphi.fdc Outage</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Marketing</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>