force-app/main/default/objects/NI_Org_Details__c/listViews/HRM_Polling_Compliance_View.listView-meta.xml
<ListView>
    <fullName>HRM_Polling_Compliance_View</fullName>
    <columns>NAME</columns>
    <columns>Org_Name__c</columns>
    <columns>Org_Status__c</columns>
    <columns>Product_Type__c</columns>
    <columns>PackageVersion__c</columns>
    <columns>Shared_Org__c</columns>
    <columns>CustomApps__c</columns>
    <columns>CustomObjects__c</columns>
    <columns>License_Type_Compliant__c</columns>
    <columns>License_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DisablePolling__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Org_Details__c.LOD_Support_Admin,NI_Org_Details__c.Delphi_fdc_Support_Admin</value>
    </filters>
    <label>HRM Polling Compliance View</label>
    <sharedTo>
        <group>Internal_IT</group>
    </sharedTo>
</ListView>