force-app/main/default/objects/NI_Org_Details__c/listViews/HRM_Polling_Enabled.listView-meta.xml
<ListView>
    <fullName>HRM_Polling_Enabled</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Org_ID__c</columns>
    <columns>Org_Name__c</columns>
    <columns>Org_Status__c</columns>
    <columns>DisablePolling__c</columns>
    <columns>Product_Type__c</columns>
    <columns>PackageVersion__c</columns>
    <columns>Shared_Org__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DisablePolling__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NI_Org_Details__c.LOD_Support_Admin,NI_Org_Details__c.Delphi_fdc_Support_Admin</value>
    </filters>
    <label>HRM Polling Enabled</label>
    <sharedTo>
        <group>NISFDCSysAdmin</group>
    </sharedTo>
</ListView>