force-app/main/default/objects/NI_Org_Details__c/listViews/Org_Details_Summary.listView-meta.xml
<ListView>
    <fullName>Org_Details_Summary</fullName>
    <columns>Primary_Account_Owner__c</columns>
    <columns>NAME</columns>
    <columns>Org_Name__c</columns>
    <columns>License_Type__c</columns>
    <columns>Annual_Salesforce_Renewal_Date__c</columns>
    <columns>Org_Compliance_Status__c</columns>
    <columns>License_Type_Compliant__c</columns>
    <columns>Data_Storage_Compliant__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Org_Status__c</field>
        <operation>equals</operation>
        <value>Provisioned</value>
    </filters>
    <filters>
        <field>Org_Type__c</field>
        <operation>equals</operation>
        <value>Salesforce Production</value>
    </filters>
    <filters>
        <field>Data_Storage_Limit__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>My Org Details Summary</label>
    <sharedTo>
        <roleAndSubordinatesInternal>CEOCFO</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>