force-app/main/default/objects/NI_Org_Details__c/listViews/Out_of_Compliance_Orgs_License_Type.listView-meta.xml
<ListView>
    <fullName>Out_of_Compliance_Orgs_License_Type</fullName>
    <columns>NAME</columns>
    <columns>Primary_Account_Owner__c</columns>
    <columns>Org_Name__c</columns>
    <columns>Custom_Apps__c</columns>
    <columns>Custom_Objects__c</columns>
    <columns>Acceptable_Apps__c</columns>
    <columns>Acceptable_Custom_Objects__c</columns>
    <columns>License_Type__c</columns>
    <columns>Required_License_Type__c</columns>
    <columns>Delphi_Net_Upgrade_Customer__c</columns>
    <columns>Reseller__c</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>License_Type_Compliant__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Org_Status__c</field>
        <operation>equals</operation>
        <value>Provisioned</value>
    </filters>
    <filters>
        <field>Data_Storage_Limit__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Out of Compliance Orgs - License Type</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>