force-app/main/default/objects/NI_Org_Details__c/listViews/Out_of_Compliance_Orgs_Storage.listView-meta.xml
<ListView>
    <fullName>Out_of_Compliance_Orgs_Storage</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Primary_Account_Owner__c</columns>
    <columns>Org_Name__c</columns>
    <columns>Data_Storage_Percent_Used__c</columns>
    <columns>Data_Storage__c</columns>
    <columns>Data_Storage_Limit__c</columns>
    <columns>Product_Type__c</columns>
    <columns>PackageVersion__c</columns>
    <columns>Delphi_Net_Upgrade_Customer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Data_Storage_Compliant__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>File_Storage_Compliant__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Org_Status__c</field>
        <operation>equals</operation>
        <value>Provisioned</value>
    </filters>
    <filters>
        <field>Data_Storage_Limit__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Out of Compliance Orgs - Data Storage</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>